# healthy-meals

./: .env_sample  .gitignore  .gitmodules  .pdm-python  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  conf.py  constraints.txt  dev-requirements.txt  docker-compose.yml  index.html  manage.py  nohup.out  noxfile.py  pyproject.toml  requirements.txt  requirements_names.txt
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue-template.md  documentation_issue.md  feature_request.md
.github/workflows/: djangoCi.yml  djangoCi.ymlPdm  djangoUvCi.yml
accounts/: admin.py  apps.py  models.py  signals.py
accounts/migrations/: 0004_customuser_created_customuser_updated.py
common/: base_model.py
django_project/: settings.py
docs/: .gitignore  .gitignore.code_branch  .gitignore.main_branch  Makefile  conf.py  coverage_run.txt
docs/logs/: allTests_run.txt
docs/qa/: nox_docs.txt
docs/qa/coverage/: .coverage  coverage.xml
docs/qa/coverage/html/: class_index.html  constraints_txt.html  function_index.html  index.html  status.json  z_509fd8af0f7a1b49_admin_py.html  z_509fd8af0f7a1b49_apps_py.html  z_509fd8af0f7a1b49_forms_py.html  z_509fd8af0f7a1b49_models_py.html  z_509fd8af0f7a1b49_signals_py.html  z_509fd8af0f7a1b49_views_py.html  z_762176fa3b4578c6_about_html.html  z_762176fa3b4578c6_home_html.html  z_7988ec22b5756f24_SOURCES_txt.html  z_7988ec22b5756f24_dependency_links_txt.html  z_7988ec22b5756f24_requires_txt.html  z_7988ec22b5756f24_top_level_txt.html  z_9626d36db42b580c_settings_py.html  z_9626d36db42b580c_urls_py.html  z_9df13ddeb1e47e46_admin_py.html  z_9df13ddeb1e47e46_apps_py.html  z_9df13ddeb1e47e46_models_py.html  z_9df13ddeb1e47e46_urls_py.html  z_9df13ddeb1e47e46_views_py.html  z_9ed9d281467a41a1_403_csrf_html.html  z_9ed9d281467a41a1_404_html.html  z_9ed9d281467a41a1_500_html.html  z_9ed9d281467a41a1__base_html.html  z_c303d6a340f095a0_login_html.html  z_c303d6a340f095a0_logout_html.html  z_c303d6a340f095a0_password_change_html.html  z_c303d6a340f095a0_password_reset_done_html.html  z_c303d6a340f095a0_password_reset_from_key_done_html.html  z_c303d6a340f095a0_password_reset_from_key_html.html  z_c303d6a340f095a0_password_reset_html.html  z_c303d6a340f095a0_password_set_html.html  z_c303d6a340f095a0_signup_html.html  z_c810615cce0f7acb_docker_clear_py.html  z_d987abd0c9dd3e61_settings_py.html  z_d987abd0c9dd3e61_urls_py.html  (+2 more)
docs/qa/tests/: index.html  junit.xml
docs/source/: docs_guide.rst  modules.rst  prog_pdm.rst  prog_prs.rst  prog_readme.rst  utils.rst
docs/sphinx_src/: docs_guide.rst  index.rst  prog_ci.rst  prog_guide.rst  prog_nox_docs.rst  prog_pdm.rst  prog_prs.rst  prog_uv.rst  qa.rst  testing_guide.rst  todos.rst
healthy_meals/: asgi.py  settings.py  urls.py  wsgi.py
hm_utils/: git_info.py
qa/: nox_docs.txt
qa/coverage/: .coverage  coverage.xml
qa/tests/: index.html  junit.xml
static/bootstrap_scss/: _variables.scss
static/bootstrap_scss/forms/: _form-control.scss
static/bootstrap_scss/mixins/: _grid.scss
static/bootstrap_scss/tests/mixins/: _auto-import-of-variables-dark.test.scss
templates/: _base.html
tests/: conftest.py
tests/accounts/: factories.py  test_database.py  test_database_cases.py
tests/nox/: test_docker_nox.py  test_local_nox.py  test_nox_check_status.py
utils/: docker_clear.py
