
[project]
name = "healthy-meals"
version = "2025.03.31"
description = "Meet your Dietary Goals with Healthier Meals."
readme = "README.md"
keywords = [
  "python",
  "django",
  "nutrition",
  "goals",
  "bodybuilding",
  "health",
  "antinflammatory",
  "autoimmunity",
  "glycemia",
  "diet",
  "planning",
  "recipes",
  "preparation",
  "cooking",
]
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "David Andrews Taylor", email = "tayloredwebsites@me.com" },
]
requires-python = "==3.12.*"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: AGPL-3.0-only",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Health",
]
dependencies = [
  # To Do: update this
  "asgiref",
  # "binaryornot==0.4.4",
  "certifi",
  "cffi",
  "charset-normalizer",
  "crispy-bootstrap5",
  "cryptography==39.0.1",
  "defusedxml==0.7.1",
  "django>=5.2",
  "django-allauth==65.0.2",
  "django-auditlog==3.0.0",
  "django_compressor==4.5.1",
  "django_coverage_plugin==3.1.0",
  "django-crispy-forms==2.3",
  "django-debug-toolbar==4.4.6",
  # "django-libsass==0.9",
  # "djangorestframework==3.15.2" # See utils/functions exception handling
  "django-safedelete==1.4.0",
  # "django-upgrade==1.22.2",
  # "gitpython==3.1.43",
  "gunicorn==23.0.0",
  "idna==3.4",
  "ipython==8.31.0",
  "nox==2024.10.9",
  "oauthlib==3.2.2",
  "packaging==23.1",
  # "pre-commit==4.1.0",
  "psycopg==3.2.3",
  "psycopg-binary==3.2.3",
  "pycparser==2.21",
  # "pygithub==2.5",
  "PyJWT==2.6.0",
  "pytest-postgresql==7.0.1",
  "python3-openid==3.2.0",
  "python-decouple==3.8",
  # "pyyaml==6.0.2",
  "requests==2.32.3",
  "requests-oauthlib==1.3.1",
  # "ruff==0.11.2",
  # "sh==2.1; sys_platform!='win23'",
  "sqlparse==0.4.3",
  # "tox==4.23.2",
  # "tox-uv>=1.17",
  "typing_extensions==4.9.0",
  "urllib3==1.26.14",
  "whitenoise==6.7.0",
  "sphinx-mdinclude>=0.6.2",
]
urls = { Repository = "https://github.com/tayloredwebsites/healthy-meals" }

[project.optional-dependencies]
dev = [
]

[dependency-groups]
lint = [
  # "black",
  # "djlint==1.36.4",
  # "flake8",
]
test = [
  "beautifulsoup4==4.12.3",
  "coverage==7.6.10",
  "factory_boy==3.3.1",
  "genbadge==1.1.1",
  "pytest==8.3.4",
  "pytest-django==4.9.0",
  # "pytest-cookies==0.7",
  "pytest-factoryboy==2.7.0",
  "pytest-html==4.1.1",
  # "pytest-instafail==0.5",
  # "pytest-xdist==3.6.1",
]
docs = [
  # "myst-parser>=4",
  "sphinx>=8.2.3",
  # "sphinx-autobuild>=2024.10.3",
  "sphinx-rtd-theme>=3.0.2",
  "sphinxcontrib-django==2.5",
]


[tool.pdm]
distribution = false


[tool.setuptools]
py-modules = []

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
# addopts = "-v --tb=short"
norecursedirs = [
  ".nox",
  ".git",
  "*/migrations/*",
  "*/static/*",
  "docs",
  ".venv",
  "*/__pycache__/*",
]
DJANGO_SETTINGS_MODULE = "django_project.settings"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
    "case_*.py",
    "cases_*.py",
    "*_case.py",
    "*_cases.py"
]

# ==== Coverage ====
[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "django_project/asgi.py",
    "django_project/wsgi.py",
    "manage.py",
    ".venv/*",
    "*LICENSE.txt",
    "*README.txt",
    "requirements*.txt",
    "docs/*",
    ".nox/*",
    "noxfile.py",
    "*/__init__.py"
]
plugins = ["django_coverage_plugin"] # include .html and .txt files
data_file = "docs/qa/coverage/.coverage"

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

ignore_errors = true

[tool.coverage.html]
directory = "docs/qa/coverage/html/"

[tool.coverage.xml]
output = "docs/qa/coverage/coverage.xml"

[tool.django.coverage.plugin]
 # include .html and .txt files
template_extensions = ["html", "txt", ""]


# # ==== mypy ====
# [tool.mypy]
# python_version = "3.12"
# check_untyped_defs = true
# ignore_missing_imports = true
# warn_unused_ignores = true
# warn_redundant_casts = true
# warn_unused_configs = true
# plugins = [
#     "mypy_django_plugin.main",
#     "mypy_drf_plugin.main",
# ]

# [[tool.mypy.overrides]]
# # Django migrations should not produce any errors:
# module = "*.migrations.*"
# ignore_errors = true

# [tool.django-stubs]
# django_settings_module = "config.settings.test"

# # ==== djLint ====
# [tool.djlint]
# blank_line_after_tag = "load,extends"
# close_void_tags = true
# format_css = true
# format_js = true
# # TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
# ignore = "H006,H030,H031,T002"
# include = "H017,H035"
# indent = 2
# max_line_length = 119
# profile = "django"

# [tool.djlint.css]
# indent_size = 2

# [tool.djlint.js]
# indent_size = 2

# [tool.ruff]
# target-version = "py312"
# # Exclude a variety of commonly ignored directories.
# extend-exclude = [
#     "*/migrations/*.py",
#     "staticfiles/*",
#     "docs/*",
# ]

# [tool.ruff.lint]
# select = [
#   "F",
#   "E",
#   "W",
#   "C90",
#   "I",
#   "N",
#   "UP",
#   "YTT",
#   # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
#   "ASYNC",
#   "S",
#   "BLE",
#   "FBT",
#   "B",
#   "A",
#   "COM",
#   "C4",
#   "DTZ",
#   "T10",
#   "DJ",
#   "EM",
#   "EXE",
#   "FA",
#   "ISC",
#   "ICN",
#   "G",
#   "INP",
#   "PIE",
#   "T20",
#   "PYI",
#   "PT",
#   "Q",
#   "RSE",
#   "RET",
#   "SLF",
#   "SLOT",
#   "SIM",
#   "TID",
#   "TC",
#   "INT",
#   # "ARG", # Unused function argument
#   "PTH",
#   "ERA",
#   "PD",
#   "PGH",
#   "PL",
#   "TRY",
#   "FLY",
#   # "NPY",
#   # "AIR",
#   "PERF",
#   # "FURB",
#   # "LOG",
#   "RUF",
# ]
# ignore = [
#   "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
#   "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
#   "SIM102", # sometimes it's better to nest
#   "UP038", # Checks for uses of isinstance/issubclass that take a tuple
#           # of types for comparison.
#           # Deactivated because it can make the code slow:
#           # https://github.com/astral-sh/ruff/issues/7871
#   "RUF100", # prevent claiming directive is not used when it is
#             # it is prevent individual lines from having errors
# #   "ERA001", # Does  not allow for commented out code
# #             # it is important to allow this in configuration files
# ]
# # The fixes in extend-unsafe-fixes will require
# # provide the `--unsafe-fixes` flag when fixing.
# extend-unsafe-fixes = [
#     "UP038",
# ]

# [tool.ruff.lint.isort]
# force-single-line = true

# # this is ignored by flake 8, even with "--config=pyproject.toml",  # noqa: ERA001
# #   got error: parsing errors: 'pyproject.toml - [line 13]: ']\n'  # noqa: ERA001
# #   it doesn't seem to like multi-line arrays  # noqa: ERA001
# # [tool.flake8]  # noqa: ERA001
# # max_line_length = 120  # noqa: ERA001
# # exclude = [  # noqa: ERA001
# #     "migrations",  # noqa: ERA001
# # ]  # noqa: ERA001
# # ignore = [  # noqa: ERA001
# #     "E252",  # noqa: ERA001
# # ]  # noqa: ERA001
# # select = [  # noqa: ERA001
# #     "E251",  # noqa: ERA001
# # ]  # noqa: ERA001